<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bk">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inggris"
        android:id="@+id/textView"
        android:hint="@string/inggris"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editInggris"
        android:hint="@string/editInggris" />
    <Button
        android:id="@+id/btnterjemah1"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="getTerjemahan"
        android:text="Terjemahkan"
        android:textColor="#000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia"
        android:id="@+id/textView2"
        android:hint="@string/indonesia"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunda"
        android:id="@+id/textView3"
        android:hint="@string/sunda"
        android:textColor="#000"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2" />

</LinearLayout>

