<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/bk">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sunda"
        android:id="@+id/textView7"
        android:textColor="#000"
        android:hint="@string/sunda" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editSunda3" />
    <Button
        android:id="@+id/button2"
        style="@style/btnStyleOrange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:onClick="getTerjemahan"
        android:text="Terjemahkan"
        android:textColor="#000"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inggris"
        android:id="@+id/textView8"
        android:textColor="#000"
        android:hint="@string/indonesia" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editIndo3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indonesia"
        android:id="@+id/textView9"
        android:textColor="#000"
        android:hint="@string/inggris" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editInggris3" />
</LinearLayout>
